fix: lint issues fixed